chart/templates/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/query"
          backend:
            service:
              name: book-getter-service
              port: 
                number: 80
        - pathType: Prefix
          path: "/command"
          backend:
            service:
              name: book-setter-service
              port: 
                number: 80
